fixing the csproj so i can debug

--- a/VimAddin/VimAddin.csproj
+++ b/VimAddin/VimAddin.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectTypeGuids>{86F6BF2A-E449-4B3E-813B-9ACC37E5545F};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <ProjectGuid>{6193DC45-BC2C-422C-A9B2-233E961D83FE}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>VimAddin</RootNamespace>
     <AssemblyName>VimAddin</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -54,38 +54,31 @@
       <Package>gtk-sharp-2.0</Package>
     </Reference>
     <Reference Include="Mono.Addins">
-      <HintPath>/Applications/Xamarin Studio.app/Contents/MacOS/lib/monodevelop/bin/Mono.Addins.dll</HintPath>
-      <HintPath>../../monodevelop/main/build/bin/Mono.Addins.dll</HintPath>
+      <HintPath>/Applications/Xamarin Studio.app/Contents/Resources/lib/monodevelop/bin/Mono.Addins.dll</HintPath>
       <Package>mono-addins</Package>
     </Reference>
     <Reference Include="ICSharpCode.NRefactory">
-      <HintPath>/Applications/Xamarin Studio.app/Contents/MacOS/lib/monodevelop/bin/ICSharpCode.NRefactory.dll</HintPath>
-      <HintPath>../../monodevelop/main/build/bin/ICSharpCode.NRefactory.dll</HintPath>
+      <HintPath>/Applications/Xamarin Studio.app/Contents/Resources/lib/monodevelop/bin/ICSharpCode.NRefactory.dll</HintPath>
       <Package>monodevelop</Package>
     </Reference>
     <Reference Include="Mono.TextEditor">
-      <HintPath>/Applications/Xamarin Studio.app/Contents/MacOS/lib/monodevelop/bin/Mono.TextEditor.dll</HintPath>
-      <HintPath>../../monodevelop/main/build/bin/Mono.TextEditor.dll</HintPath>
+      <HintPath>/Applications/Xamarin Studio.app/Contents/Resources/lib/monodevelop/bin/Mono.TextEditor.dll</HintPath>
       <Package>monodevelop</Package>
     </Reference>
     <Reference Include="MonoDevelop.Core">
-      <HintPath>/Applications/Xamarin Studio.app/Contents/MacOS/lib/monodevelop/bin/MonoDevelop.Core.dll</HintPath>
-      <HintPath>../../monodevelop/main/build/bin/MonoDevelop.Core.dll</HintPath>
+      <HintPath>/Applications/Xamarin Studio.app/Contents/Resources/lib/monodevelop/bin/MonoDevelop.Core.dll</HintPath>
       <Package>monodevelop</Package>
     </Reference>
     <Reference Include="MonoDevelop.DesignerSupport">
-      <HintPath>/Applications/Xamarin Studio.app/Contents/MacOS/lib/monodevelop/AddIns/MonoDevelop.DesignerSupport/MonoDevelop.DesignerSupport.dll</HintPath>
-      <HintPath>../../monodevelop/main/build/AddIns/MonoDevelop.DesignerSupport/MonoDevelop.DesignerSupport.dll</HintPath>
+      <HintPath>/Applications/Xamarin Studio.app/Contents/Resources/lib/monodevelop/AddIns/MonoDevelop.DesignerSupport/MonoDevelop.DesignerSupport.dll</HintPath>
       <Package>monodevelop-core-addins</Package>
     </Reference>
     <Reference Include="MonoDevelop.Ide">
-      <HintPath>/Applications/Xamarin Studio.app/Contents/MacOS/lib/monodevelop/bin/MonoDevelop.Ide.dll</HintPath>
-      <HintPath>../../monodevelop/main/build/bin/MonoDevelop.Ide.dll</HintPath>
+      <HintPath>/Applications/Xamarin Studio.app/Contents/Resources/lib/monodevelop/bin/MonoDevelop.Ide.dll</HintPath>
       <Package>monodevelop</Package>
     </Reference>
     <Reference Include="MonoDevelop.SourceEditor2">
-      <HintPath>/Applications/Xamarin Studio.app/Contents/MacOS/lib/monodevelop/AddIns/DisplayBindings/SourceEditor/MonoDevelop.SourceEditor2.dll</HintPath>
-      <HintPath>../../monodevelop/main/build/AddIns/DisplayBindings/SourceEditor/MonoDevelop.SourceEditor2.dll</HintPath>
+      <HintPath>/Applications/Xamarin Studio.app/Contents/Resources/lib/monodevelop/AddIns/DisplayBindings/SourceEditor/MonoDevelop.SourceEditor2.dll</HintPath>
       <Package>monodevelop-core-addins</Package>
     </Reference>
     <Reference Include="Mono.Posix" />
@@ -123,3 +116,4 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
+
