--- a/VimAddin/VimAddin.csproj
+++ b/VimAddin/VimAddin.csproj
@@ -8,6 +8,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>VimAddin</RootNamespace>
     <AssemblyName>VimAddin</AssemblyName>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
